<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/profile_root_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackText"
            android:fillViewport="true">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/parent_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutDescription="@xml/fragment_profile_scene">

                <ImageView
                    android:id="@+id/top_background"
...
                    android:background="@drawable/bg_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/phone_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:padding="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
...
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="3" />

                <ImageView
                    android:id="@+id/notification_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:background="?attr/selectableItemBackground"
                    android:padding="@dimen/margin_16dp"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/balance_tv" />

                <TextView
                    android:id="@+id/balance_view"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:background="?attr/selectableItemBackground"
...
                    android:background="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/balance_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/orders_view"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif-medium"
...
                    android:background="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/orders_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/withdrawal_applications_view"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif-medium"
...
                    android:background="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/withdrawal_applications_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/accounts_and_cards_view"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif-medium"
...
                    android:background="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/accounts_and_cards_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/support_service_view"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif-medium"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/support_service_view"
                    tools:text="+2"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/exit_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginBottom="@dimen/margin_16dp"
                    android:background="?attr/selectableItemBackground"
...
