...
        app:srcCompat="@drawable/ic_notification"
        tools:visibility="invisible" />

    <!--  =========  -->

    <ImageView
        android:id="@+id/accounts_background"
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:layout_marginStart="@dimen/margin_18dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_18dp"
        android:clickable="true"
...
        app:layout_constraintStart_toStartOf="@id/accounts_background"
        app:layout_constraintTop_toBottomOf="@+id/accounts_message" />

    <!--  =========  -->

    <ImageView
        android:id="@+id/cards_background"
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:layout_margin="@dimen/margin_18dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/bg_withdraw_gradient"
...
