<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/two_dialog_root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_24dp"
    android:background="@drawable/bg_dialog">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/mainBackground"
        android:textSize="@dimen/text_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/daily_withdrawal" />

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/accounts_dialog_gray"
        android:textSize="@dimen/text_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="@string/daily_withdrawal_dialog_message" />

    <TextView
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:background="?selectableItemBackground"
        android:fontFamily="sans-serif-medium"
        android:padding="24dp"
        android:textColor="@color/gray_profile"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ok_btn"
        app:layout_constraintTop_toBottomOf="@+id/message"
        tools:text="@string/back" />

    <TextView
        android:id="@+id/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:background="?selectableItemBackground"
        android:fontFamily="sans-serif-medium"
        android:padding="24dp"
        android:textColor="@color/withdraws_yellow"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        tools:text="@string/understand" />

</androidx.constraintlayout.widget.ConstraintLayout>

