...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_notification"
        tools:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/withdraws_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/withdraws_title"
        tools:itemCount="8"
        tools:listitem="@layout/item_withdraw" />

    <include
        android:id="@+id/empty_withdraws"
        layout="@layout/empty_withdraws_screen"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/withdraws_title" />

    <ProgressBar
        android:id="@+id/progress_bar"
...
