...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_notification"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/write_to_us_view"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:background="@drawable/bg_profile_gradient"
...
